--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Design</a></div>
+					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
@@ -161,8 +161,8 @@
 		<div id="fh5co-work" class="fh5co-light-grey">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Work</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Últimos trabajos</h2>
+					<p>A continuación puedes ver algunos de mis últimos trabajos.</p>
 				</div>
 			</div>
 			<div class="row">
