--- a/work.html
+++ b/work.html
@@ -94,6 +94,7 @@
 				margin-bottom: 6em;
 				text-align: center;
 				position: relative;
+				padding-top: 1.5em;
 			}
 			.headings:after{
 				content: '';
@@ -106,7 +107,7 @@
 				bottom: -1.8em;
 				left: 0;
 				right: 0;
-				margin: 0 auto;
+				margin: 0 auto;				
 			}
 
 
@@ -125,8 +126,8 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Inicio</a></li>
-							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li class="active"><a href="work.html">Portafolio</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">Acerca de</a></li>
 							<li><a href="contact.html">Contacto</a></li>
@@ -137,10 +138,6 @@
 			</div>
 		</div>
 	</nav>
-		<aside id="fh5co-hero">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
 
 
 <script type="text/javascript"
@@ -149,18 +146,20 @@ src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 <div class="jquery-script-clear"></div>
 </div>
 </div>
-		<div class="container">
+		<div class="container-wrap">
+			<div class="fh5co-light-grey">
+				<div class="content container-fluid">	
 
-			<div class="content">
+					<div class="headings">
+						<h1 class="page-title">Portafolio</h1>
+					</div>	
 
-				<div class="headings">
-					<h1 class="page-title">Portafolio</h1>
-				</div>
+					<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
+					<div class="behance-container"></div>	
 
-				<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
-				<div class="behance-container"></div>
-
+				</div>	
 			</div>
+
 
 		</div>
 
