--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Neat &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Angela Carolina Pulido Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Angela Pulido Portfolio" />
+	<meta name="keywords" content="Angela Carolina Pulido, diseñadora, Ux design, ui design, designer" />
+	<meta name="author" content="angelacarolinapulido.com" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -37,6 +37,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
 	
+	<!-- Google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -71,23 +73,15 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Neat</a></div>
+					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
-							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="about.html">Acerca de</a></li>
+							<li class="active"><a href="contact.html">Contacto</a></li>
 						</ul>
 					</div>
 				</div>
