--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<script src="js/main-original.js"></script>
 
 	</body>
 </html>
