--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="work.html">Portafolio</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
 							<li class="active"><a href="about.html">Acerca de</a></li>
 							<li><a href="contact.html">Contacto</a></li>
 						</ul>
@@ -220,8 +220,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
-
+	<script src="js/main-original.js"></script>
 	</body>
 </html>
 
