--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="work.html">Portafolio</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
 							<li><a href="about.html">Acerca de</a></li>
 							<li class="active"><a href="contact.html">Contacto</a></li>
 						</ul>
@@ -112,43 +112,47 @@
 		<div id="fh5co-contact">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Contact us</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+					<h1>ESCRIBEME</h1>
+					<p>¿Estás interesado en contactarme? O quieres decirme hola, envíame un correo a <a href="mailto:hola@angelacarolinapulido.com">hola@angela.design.com</a> o puedes usar el formulario de contacto que aparece aquí abajo, también puedes escribirme por las redes sociales. ¡Espero tu mensaje!</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-md-push-1 animate-box">
-					<h3>Our Address</h3>
+					<h3>Mis datos</h3>
 					<ul class="contact-info">
-						<li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone3"></i>+ 1235 2355 98</li>
-						<li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-location4"></i>Vivo en Bogotá</li>
+						<li><i class="icon-phone3"></i>+57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co">hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com">www.angelacarolinapulido.com</a></li>
 					</ul>
 				</div>
 				<div class="col-md-7 col-md-push-1 animate-box">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Name">
+
+				<div class="row">
+					<form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com">
+							<div class="col-md-6">
+								<div class="form-group">
+									<input type="text" name="name" class="form-control" placeholder="Nombre">
+								</div>
+							</div>					  	
+
+							<div class="col-md-6">
+								<div class="form-group">
+									<input type="email" name="email" placeholder="Email" class="form-control">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Email">
+							<div class="col-md-12">
+								<div class="form-group">
+									<textarea name="message" placeholder="Mensaje" class="form-control" id="" cols="30" rows="7"></textarea>
+								</div>
+							</div>					  
+
+							<div class="col-md-12">
+								<div class="form-group">
+									<button type="submit" class="btn btn-primary btn-modify">Enviar</button>			
+								</div>
 							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="form-group">
-								<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary btn-modify">
-							</div>
-						</div>
-					</div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -235,7 +239,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
+	<script src="js/main-original.js"></script>
 
 	</body>
 </html>
