--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<ul>
 							<li class="active"><a href="index.html">Inicio</a></li>
 							<li><a href="work.html">Portafolio</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
 							<li><a href="about.html">Acerca de</a></li>
 							<li><a href="contact.html">Contacto</a></li>
 						</ul>
