--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@
 						<ul>
 							<li><a href="index.html">Inicio</a></li>
 							<li class="active"><a href="work.html">Portafolio</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
 							<li><a href="about.html">Acerca de</a></li>
 							<li><a href="contact.html">Contacto</a></li>
 						</ul>
