--- a/work.html
+++ b/work.html
@@ -161,7 +161,58 @@
 </div>
 
 
+<!-- footer -->
+	<div class="container-wrap">
+		<footer id="fh5co-footer" role="contentinfo">
+			<div class="row">
+				<div class="col-md-3 fh5co-widget">
+					<h4>Acerca de mi</h4>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
+				</div>
 
+
+				<div class="col-md-3 col-md-push-1">
+					<h4>Links</h4>
+					<ul class="fh5co-footer-links">
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
+							<li><a href="about.html">Acerca de</a></li>
+							<li><a href="contact.html">Contacto</a></li>
+					</ul>
+				</div>
+
+				<div class="col-md-3">
+					<h4>Información de contacto</h4>
+					
+					<ul class="fh5co-footer-links">
+						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
+						<li><i class="icon-phone3"></i> +57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
+					</ul>
+					
+				</div>
+
+			</div>
+
+			<div class="row copyright">
+				<div class="col-md-12 text-center">
+					<p>
+						<small class="block">&copy; 2017 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
+					</p>
+					<p>
+						<ul class="fh5co-social-icons">
+							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</footer>
+	</div><!-- END Footer -->
 <!-- Scrip Behance -->
 	<script>
 			$(document).ready(function(){
