--- a/index.html
+++ b/index.html
@@ -272,43 +272,37 @@
 		</div>
 	</div><!-- END container-wrap -->
 
+<!-- footer -->
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>About Neat</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h4>Acerca de mi</h4>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
 				</div>
-				<div class="col-md-3 col-md-push-1">
-					<h4>Latest Posts</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Amazing Templates</a></li>
-						<li><a href="#">100+ Free Download Templates</a></li>
-						<li><a href="#">Neat is now available</a></li>
-						<li><a href="#">Download 1000+ icons</a></li>
-						<li><a href="#">Big Deal for this month of March, Join Us here</a></li>
-					</ul>
-				</div>
+
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About us</a></li>
+							<li><a href="index.html">Inicio</a></li>
+							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
+							<li><a href="about.html">Acerca de</a></li>
+							<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
-					<h4>Contact Information</h4>
+					<h4>Información de contacto</h4>
+					
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
+						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
+						<li><i class="icon-phone3"></i> +57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
 					</ul>
+					
 				</div>
 
 			</div>
@@ -316,21 +310,20 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2017 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
 						</ul>
 					</p>
 				</div>
 			</div>
 		</footer>
-	</div><!-- END container-wrap -->
+	</div><!-- END Footer -->
 	</div>
 
 	<div class="gototop js-top">
