prueba de behance
prueba de behance

--- a/blog.html
+++ b/blog.html
@@ -292,8 +292,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
-	<script src="js/main.js"></script>
-
+	<script src="js/main-original.js"></script>
 	</body>
 </html>
 
