--- a/Hola.html
+++ b/Hola.html
@@ -1,5 +1,6 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +49,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
 
 	<!-- Embed Behance Javascript -->
-	<script type="text/javascript" src="js/embed.behance.js"></script>	
+	<script type="text/javascript" src="js/embed.behance2.js"></script>	
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -72,94 +73,23 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
-<style type="text/css">
-
-
-			*, *:before, *:after{
-				box-sizing:border-box;
-				margin: 0;
-				padding: 0;
-				outline: 0;
-			}
-
-			/* layout structure */
-			.container {
-				padding: 5%;				
-			}
-			.content {
-				margin: 0 auto;
-			}
-			.headings{				
-				margin-bottom: 6em;
-				text-align: center;
-				position: relative;
-				padding-top: 2.5em;
-			}
-			.headings:after{
-				content: '';
-				display: block;
-				width: 2em;
-				height: 3px;
-				background-color: #d6d6d6;
-				margin-top: 1.5em;
-				position: absolute;
-				bottom: -1.8em;
-				left: 0;
-				right: 0;
-				margin: 0 auto;				
-			}
-
-
-		</style>
-
-	</head>
-
-	<body>
-<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container-wrap">
-			<div class="top-menu">
-				<div class="row">
-					<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
-					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<li><a href="index.html">Inicio</a></li>
-							<li class="active"><a href="work.html">Portafolio</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">Acerca de</a></li>
-							<li><a href="contact.html">Contacto</a></li>
-						</ul>
-					</div>
-				</div>
-				
-			</div>
+</head>
+<body>
+	
 		</div>
-	</nav>
-
-	<div class="jquery-script-clear"></div>
-	</div>
 
 	<div class="container-wrap">
 			<div class="fh5co-light-grey">
 				<div class="content container-fluid">	
-
-					<div class="headings">
-						<h1 class="page-title">Portafolio</h1>
-					</div>	
-
 					<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
 					<div class="behance-container"></div>	
-
-				</div>	
+				</div>
 			</div>
+
 	</div>
 
-	<div class="gototop js-top"> <a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a></div>
+	
 </div>
-
 
 
 <!-- Scrip Behance -->
@@ -178,11 +108,11 @@
 	</script>
 
 
-<!-- Main -->
-	<script src="js/main-original.js"></script>
-
 
 
 	</body>
 </html>
 
+
+</body>
+</html>
