--- a/blog.html
+++ b/blog.html
@@ -225,7 +225,27 @@
 		</div>
 
 
+		<div id="fh5co-blog" class="blog-flex">
+			<div class="featured-blog" style="background-image: url(images/blog-1.jpg);">
+				<div class="desc-t">
+					<div class="desc-tc">
+						<span class="featured-head">¡Escríbeme!</span>
+						<h3><a href="#">Me encantaría conocerte.</a></h3>
+						<span><a href="contact.html" class="read-button">Contáctame</a></span>
+					</div>
+				</div>
+			</div>
 
+			<div class="blog-entry fh5co-light-grey">
+				<div class="row animate-box">
+					<div class="col-md-12">
+						<h2>Acerca de mi</h2>
+						<p> Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
+					</div>
+				</div>
+
+			</div>
+		</div>
 		
 	</div>
 </div>
