--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angela Carolina Pulido Portfolio</title>
@@ -8,6 +8,7 @@
 	<meta name="description" content="Angela Pulido Portfolio" />
 	<meta name="keywords" content="Angela Carolina Pulido, diseñadora, Ux design, ui design, designer" />
 	<meta name="author" content="angelacarolinapulido.com" />
+
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -37,8 +38,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
 	
-	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+	<!-- Embed Behance Styles -->
+	<link rel="stylesheet" type="text/css" media="all" href="css/embed.behance.css"/>
+
+	<!-- jQuery lib -->
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+	<!-- jQuery Easing lib (optional) -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+
+	<!-- Embed Behance Javascript -->
+	<script type="text/javascript" src="js/embed.behance2.js"></script>	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -61,12 +72,11 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
-	</head>
-	<body>
-		
-	<div class="fh5co-loader"></div>
+</head>
+<body>
 	
+<!-- Barra navegación -->
+<div class="fh5co-loader"></div>
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container-wrap">
@@ -89,8 +99,12 @@
 			</div>
 		</div>
 	</nav>
+<!-- Barra navegación -->
+
+
 	<div class="container-wrap">
-		<aside id="fh5co-hero">
+		
+		<aside id="fh5co-hero"><!-- slider -->
 			<div class="flexslider">
 				<ul class="slides">
 			   	<li style="background-image: url(images/img_bg_1.jpg);">
@@ -119,8 +133,9 @@
 			   	</li>	
 			  	</ul>
 		  	</div>
-		</aside>
-		<div id="fh5co-services">
+		</aside><!-- END Slider -->
+
+		<div id="fh5co-services"><!-- servicios -->
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
@@ -156,121 +171,84 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div><!-- END servicios -->
 
-		<div id="fh5co-work" class="fh5co-light-grey">
+		<div id="fh5co-work" class="fh5co-light-grey"> <!-- Trabajos -->
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>Últimos trabajos</h2>
 					<p>A continuación puedes ver algunos de mis últimos trabajos.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work"  style="background-image: url(images/portfolio-1.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
-						</div>
-					</a>
-				</div>
+			<div >
+				<div class="fh5co-light-grey">
+					<div class="content container-fluid">	
+								<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
+						<div class="behance-container"></div>	
+					</div>				
+				</div>	
+			</div>
+			<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<p><a class="btn btn-primary btn-demo " href="work.html"></i>Ver más</a> </p>
 			</div>
 		</div>
+
 
 		<div id="fh5co-counter" class="fh5co-counters">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<p>We have a fun facts far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>Algunos números sobre mi trabajo.</p>
 					</div>
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="row">
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="3452" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Cups of Coffee</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="4567" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Tazas de café</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="234" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Client</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Clientes</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="6542" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Projects</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="567" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Proyectos</span>
 						</div>
 						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Done Projects</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="10220" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Días felices</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
+
 		<div id="fh5co-blog" class="blog-flex">
 			<div class="featured-blog" style="background-image: url(images/blog-1.jpg);">
 				<div class="desc-t">
 					<div class="desc-tc">
-						<span class="featured-head">Featured Posts</span>
-						<h3><a href="#">Top 20 Best WordPress Themes 2017 Multi Purpose and Creative Websites</a></h3>
-						<span><a href="#" class="read-button">Learn More</a></span>
+						<span class="featured-head">¡Escríbeme!</span>
+						<h3><a href="#">Me encantaría conocerte.</a></h3>
+						<span><a href="contact.html" class="read-button">Contáctame</a></span>
 					</div>
 				</div>
 			</div>
+
 			<div class="blog-entry fh5co-light-grey">
 				<div class="row animate-box">
 					<div class="col-md-12">
-						<h2>Latest Posts</h2>
+						<h2>Acerca de mi</h2>
+						<p> Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12 animate-box">
-						<a href="#" class="blog-post">
-							<span class="img" style="background-image: url(images/blog-2.jpg);"></span>
-							<div class="desc">
-								<h3>26 Best Education WordPress Themes 2017 You Need To See</h3>
-								<span class="cat">Collection</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-12 animate-box">
-						<a href="#" class="blog-post">
-							<span class="img" style="background-image: url(images/blog-1.jpg);"></span>
-							<div class="desc">
-								<h3>16 Outstanding Photography WordPress Themes You Must See</h3>
-								<span class="cat">Collection</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-12 animate-box">
-						<a href="#" class="blog-post">
-							<span class="img" style="background-image: url(images/blog-3.jpg);"></span>
-							<div class="desc">
-								<h3>16 Outstanding Photography WordPress Themes You Must See</h3>
-								<span class="cat">Collection</span>
-							</div>
-						</a>
-					</div>
-				</div>
+
 			</div>
 		</div>
-	</div><!-- END container-wrap -->
+		
+	</div>
+</div>
 
 <!-- footer -->
 	<div class="container-wrap">
@@ -330,8 +308,7 @@
 		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
 	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
@@ -347,6 +324,26 @@
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Main -->
 	<script src="js/main-original.js"></script>
+
+<!-- Scrip Behance -->
+	<script>
+			$(document).ready(function(){
+
+				 $('.behance-container').embedBehance({
+
+				 	// behance API Key
+					apiKey: 'aQLZR3v9Ft6LRUhb1vKBNAzr2roPvVgm',
+
+					// Behance Username
+					userName: 'angelapuli6913',infiniteScrolling: true,
+				});
+			});
+	</script>
+
+
+
+
+	</body>
 
 	</body>
 </html>
