--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">Web Design &amp; UI</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>Me encanta el diseño de interfaces y la web, comenzó como un hobbie y ahora es mi carera.</p>
 						</div>
 					</div>
 				</div>
@@ -166,7 +166,7 @@
 						</span>
 						<div class="desc">
 							<h3><a href="#">Web Development</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>Siempre me ha gustado aprender sobre nuevas tecnologías sobre todo acerca de la web.</p>
 						</div>
 					</div>
 				</div>
