--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
 				</div>
 
 
