--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 				<div class="row animate-box">
 					<div class="col-md-12">
 						<h2>Acerca de mi</h2>
-						<p> Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
+						<p> Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Me encanta aprender sobre nuevas tecnologías, leer novelas ver series y salir a caminar con mis perritos.</p>
+
 					</div>
 				</div>
 
@@ -256,7 +257,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos a continuación.</p>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
 				</div>
 
 
