--- a/about.html
+++ b/about.html
@@ -112,8 +112,8 @@
 		<div id="fh5co-about">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section">
-					<h3>Our History</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<h3>Mi Historia</h3>
+					<p>"Cuando leía cuentos de hadas suponía que esas cosas nunca ocurrían, y aquí estoy ahora en medio de una" - L. Carroll</p>
 				</div>
 			</div>
 
@@ -123,15 +123,17 @@
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<div class="about-desc">
-						<h3>¡Hola! Soy Ánngela Carolina</h3>
-						<p>Soy una Diseñadora Visual de Bogotá Colombia. Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet. Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<h3>¡Hola! Soy Ángela Carolina</h3>
+						<p>Mi pasión es el diseño y más allá el mundo tecnológico y todo lo que este abarca. Mi carrera como Diseñadora gráfica me dio las bases para crear interfaces acordes con las necesidades del usuario, del entorno y del proyecto. Me encanta aprender, por eso siempre estoy estudiando o leyendo para estar actualizada con las tendencias y necesidades del mercado.</p>
 						<p>
-							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							</ul>
+						<p>Cuento con experiencia en el área digital y he tenido la fortuna de ser emprendedora de mi empresa Ideas Soluciones empresariales, de la cual soy líder de diseño, resolviendo retos cada día.</p>
+
+						<ul class="fh5co-social-icons">
+							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+						</ul>
 						</p>
 					</div>
 				</div>
