--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<aside id="fh5co-hero"><!-- slider -->
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_1.jpg);">
+			   	<li style="background-image: url(images/img_bg_1.png);">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
