--- a/work.html
+++ b/work.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Angela Pulido Portfolio" />
 	<meta name="keywords" content="Angela Carolina Pulido, diseñadora, Ux design, ui design, designer" />
 	<meta name="author" content="angelacarolinapulido.com" />
+	<meta name="google-site-verification" content="yGu0gnjD5DocVeWQofdHz20nep901R1aTEnqe0ivbw0" />
 
 
 	<!-- 
