--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					
 					<ul class="fh5co-footer-links">
 						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
-						<li><i class="icon-phone3" itemprop="telephone"></i> +57 3044188392</li>
+						<li><i itemprop="telephone" class="icon-phone3"></i> +57 3044188392</li>
 						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"><span itemprop="email"> hola@angelacarolinapulido.com</span></a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
 					</ul>
