--- a/contact.html
+++ b/contact.html
@@ -121,10 +121,10 @@
 			<div class="row">
 				<div class="col-md-3 col-md-push-1 animate-box">
 					<h3>Mis datos</h3>
-					<ul class="contact-info">
-						<li><i class="icon-location4"></i>Vivo en Bogotá</li>
-						<li><i class="icon-phone3"></i>+57 3044188392</li>
-						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co">hola@angelacarolinapulido.com</a></li>
+					<ul itemscope itemtype="http://schema.org/LocalBusiness" class="contact-info">
+						<li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress" itemref="_addressCountry5"><i class="icon-location4"></i>Vivo en <span itemprop="addressLocality">Bogotá</span></li>
+						<li itemprop="telephone"><i class="icon-phone3"></i>+57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"><span itemprop="email">hola@angelacarolinapulido.com</span></a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com">www.angelacarolinapulido.com</a></li>
 					</ul>
 				</div>
@@ -167,7 +167,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
+					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - <span id="_addressCountry5" itemprop="addressCountry">Colombia</span>. Puedes mirar mis últimos trabajos en mi portafolio.</p>
 				</div>
 
 
