--- a/about.html
+++ b/about.html
@@ -64,6 +64,17 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111616014-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());	
+
+	  gtag('config', 'UA-111616014-1');
+	</script>
+
+
 	</head>
 	<body>
 		
