--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				<div class="row animate-box">
 					<div class="col-md-12">
 						<h2>Acerca de mi</h2>
-						<p> Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Me encanta aprender sobre nuevas tecnologías, leer novelas ver series y salir a caminar con mis perritos.</p>
+						<p> Soy una diseñadora de interfaces de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Me encanta aprender sobre nuevas tecnologías, leer novelas ver series y salir a caminar con mis perritos.</p>
 
 					</div>
 				</div>
