--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfazes de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - <span id="_addressCountry5" itemprop="addressCountry">Colombia</span>. Puedes mirar mis últimos trabajos en mi portafolio.</p>
+					<p>Soy una diseñadora de interfaces de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - <span id="_addressCountry5" itemprop="addressCountry">Colombia</span>. Puedes mirar mis últimos trabajos en mi portafolio.</p>
 				</div>
 
 
