Tilde de escríbeme
Tilde de escríbeme

--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
 		<div id="fh5co-contact">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h1>ESCRIBEME</h1>
+					<h1>ESCRÍBEME</h1>
 					<p>¿Estás interesado en contactarme? O quieres decirme hola, envíame un correo a <a href="mailto:hola@angelacarolinapulido.com">hola@angela.design.com</a> o puedes usar el formulario de contacto que aparece aquí abajo, también puedes escribirme por las redes sociales. ¡Espero tu mensaje!</p>
 				</div>
 			</div>
