--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,9 @@
 
 	</head>
 	<body>
-	<header>
-		hola mundo
-	</header>	
+
+		<header> hola mundo2</header>
+
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
@@ -143,7 +143,8 @@
  
  <!-- Formulario -->
 				<div class="row">
-					<form action="http://formspree.io/hola@angelacarolinapulido.com" method="POST" />
+					<form action="https://formspree.io/<hola@angelacarolinapulido.com>" method="POST" />
+
 					<!-- <form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com"> -->
 							<div class="col-md-6">
 								<div class="form-group">
