--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 	</head>
 	<body>
 
-		<header> hola mundo3</header>
+		<header> hola mundo4</header>
 
 	<div class="fh5co-loader"></div>
 	
@@ -143,9 +143,8 @@
  
  <!-- Formulario -->
 				<div class="row">
-					<form action="https://formspree.io/hola@angelacarolinapulido.com" method="POST" />
+					<form method="POST" action="https://formspree.io/hola@angelacarolinapulido.com">
 
-					<!-- <form method="POST" action="http://formspree.io/hola@angelacarolinapulido.com"> -->
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="name" class="form-control" placeholder="Nombre">
