--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 					apiKey: 'JVc4JqkGHNrLZovGVvpcGSRReCGURzRK',
 
 					// Behance Username
-					userName: 'angelapuli6913',infiniteScrolling: true,
+					userName: 'angelapulido',infiniteScrolling: true,
 				});
 			});
 	</script>
