--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 												<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter" itemprop="url"></i></a></li>
 												<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
 												<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
-												<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
+												<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 											</ul>
 										</p>										
 										<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contáctame</a> </p>
@@ -317,7 +317,7 @@
 							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
 							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
-							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+							<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance"></i></a></li>
 						</ul>
 					</p>
 				</div>
