--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
 							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
-							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+							<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance"></i></a></li>
 						</ul>
 						</p>
 					</div>
@@ -208,7 +208,7 @@
 							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank"><i class="icon-linkedin"></i></a></li>
 							<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble"></i></a></li>
-							<li><a href="https://www.behance.net/angelapuli6913" target="_blank"><i class="icon-behance"></i></a></li>
+							<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance"></i></a></li>
 						</ul>
 					</p>
 				</div>
