--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 </head>
 <body>
-	
+Ingles	
 <!-- Barra navegación -->
 <div class="fh5co-loader"></div>
 	<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
