--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ Ingles
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html " itemprop="url">Inicio</a></li>
-							<li><a href="work.html" itemprop="url">Portafolio</a></li>
+							<li class="active"><a href="index.html " itemprop="url">Home</a></li>
+							<li><a href="work.html" itemprop="url">Portfolio</a></li>
 							<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
-							<li><a href="about.html" itemprop="url">Acerca de</a></li>
-							<li><a href="contact.html" itemprop="url">Contacto</a></li>
+							<li><a href="about.html" itemprop="url">About</a></li>
+							<li><a href="contact.html" itemprop="url">Contact</a></li>
 						</ul>
 					</div>
 				</div>
