--- a/index.html
+++ b/index.html
@@ -87,35 +87,34 @@
 </head>
 <body>
 Ingles	
-<!-- Barra navegación -->
-<div class="fh5co-loader"></div>
-	<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container-wrap">
-			<div class="top-menu">
-				<div class="row">
-					<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
+<!-- NAV BAR -->
+	<div class="fh5co-loader"></div>
+		<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
+		<nav class="fh5co-nav" role="navigation">
+			<div class="container-wrap">
+				<div class="top-menu">
+					<div class="row">
+						<div class="col-xs-2">
+						<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
+						</div>
+						<div class="col-xs-10 text-right menu-1">
+							<ul>
+								<li class="active"><a href="index.html " itemprop="url">Home</a></li>
+								<li><a href="work.html" itemprop="url">Portfolio</a></li>
+								<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
+								<li><a href="about.html" itemprop="url">About</a></li>
+								<li><a href="contact.html" itemprop="url">Contact</a></li>
+							</ul>
+						</div>
 					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<li class="active"><a href="index.html " itemprop="url">Home</a></li>
-							<li><a href="work.html" itemprop="url">Portfolio</a></li>
-							<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
-							<li><a href="about.html" itemprop="url">About</a></li>
-							<li><a href="contact.html" itemprop="url">Contact</a></li>
-						</ul>
-					</div>
+					
 				</div>
-				
 			</div>
-		</div>
-	</nav>
-<!-- Barra navegación -->
-
-
-	<div class="container-wrap">
-		
+		</nav>
+<!-- END NAV BAR -->
+<!-- wrap -->
+<div class="container-wrap">
+<!-- HERO -->
 		<aside id="fh5co-hero"><!-- slider -->
 			<div class="flexslider">
 				<ul class="slides">
@@ -125,8 +124,8 @@ Ingles
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Hola soy <span itemprop="name"> Angela Carolina Pulido</span></h1>
-										<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Soy una diseñadora visual de <span itemprop="addressLocality">Bogotá</span></h2>
+				   					<h1>Hi I am <span itemprop="name"> Angela Carolina Pulido</span></h1>
+										<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">I am a UX/UI designer based in <span itemprop="addressLocality">Bogotá</span></h2>
 
 										<p>
 											<ul class="fh5co-social-icons">
@@ -136,7 +135,7 @@ Ingles
 												<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 											</ul>
 										</p>										
-										<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contáctame</a> </p>
+										<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
 				   				</div>
 
 				   			</div>
@@ -145,8 +144,10 @@ Ingles
 			   	</li>	
 			  	</ul>
 		  	</div>
-		</aside><!-- END Slider -->
+		</aside>
+<!-- HERO --> 
 
+<!-- SERVICES -->
 		<div id="fh5co-services"><!-- servicios -->
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
@@ -155,8 +156,8 @@ Ingles
 							<i class="icon-diamond"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Identidad y Marca</a></h3>
-							<p>He trabajado en la creación y renovación de multiples marcas.</p>
+							<h3><a href="#">Branding</a></h3>
+							<p>I have worked on the creation and renewal of multiple brands.</p>
 						</div>
 					</div>
 				</div>
@@ -166,8 +167,8 @@ Ingles
 							<i class="icon-lab2"></i>
 						</span>
 						<div class="desc">
-							<h3><a href="#">Web Design &amp; UI</a></h3>
-							<p>Me encanta el diseño de interfaces y la web, comenzó como un hobbie y ahora es mi carera.</p>
+							<h3><a href="#">UX &amp; UI</a></h3>
+							<p>I help startups design easy to use and profitable products</p>
 						</div>
 					</div>
 				</div>
@@ -178,18 +179,20 @@ Ingles
 						</span>
 						<div class="desc">
 							<h3><a href="#">Web Development</a></h3>
-							<p>Siempre me ha gustado aprender sobre nuevas tecnologías sobre todo acerca de la web.</p>
+							<p>I have always liked to learn about new technologies, especially about the web.</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div><!-- END servicios -->
+		</div>
+<!-- END SERVICES -->
 
-		<div id="fh5co-work" class="fh5co-light-grey"> <!-- Trabajos -->
+<!-- Trabajos -->
+		<div id="fh5co-work" class="fh5co-light-grey"> 
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Últimos trabajos</h2>
-					<p>A continuación puedes ver algunos de mis últimos trabajos.</p>
+					<h2>Last works</h2>
+					<p>Below you can see some of my latest works.</p>
 				</div>
 			</div>
 			<div >
@@ -201,15 +204,16 @@ Ingles
 				</div>	
 			</div>
 			<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<p><a class="btn btn-primary btn-demo " href="work.html"></i>Ver más</a> </p>
+					<p><a class="btn btn-primary btn-demo " href="work.html"></i>See more</a> </p>
 			</div>
 		</div>
+<!-- Trabajos -->
 
-
+<!-- NUMBERS -->
 		<div id="fh5co-counter" class="fh5co-counters">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<p>Algunos números sobre mi trabajo.</p>
+					<p>Some numbers about my work</p>
 					</div>
 			</div>
 			<div class="row animate-box">
@@ -217,33 +221,34 @@ Ingles
 					<div class="row">
 						<div class="col-md-3 text-center">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="4567" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Tazas de café</span>
+							<span class="fh5co-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Clientes</span>
+							<span class="fh5co-counter-label">Clients</span>
 						</div>
 						<div class="col-md-3 text-center">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="567" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Proyectos</span>
+							<span class="fh5co-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="10220" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Días felices</span>
+							<span class="fh5co-counter-label">Happy Days</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+<!-- END NUMBERS -->
 
-
+<!-- CONTACT -->
 		<div id="fh5co-blog" class="blog-flex">
 			<div class="featured-blog" style="background-image: url(images/blog-1.jpg);">
 				<div class="desc-t">
 					<div class="desc-tc">
 						<span class="featured-head">¡Escríbeme!</span>
-						<h3><a href="#">Me encantaría conocerte.</a></h3>
-						<span><a href="contact.html" class="read-button">Contáctame</a></span>
+						<h3><a href="#">I'd love to meet you</a></h3>
+						<span><a href="contact.html" class="read-button">Contact me</a></span>
 					</div>
 				</div>
 			</div>
@@ -251,16 +256,19 @@ Ingles
 			<div class="blog-entry fh5co-light-grey">
 				<div class="row animate-box">
 					<div class="col-md-12">
-						<h2>Acerca de mi</h2>
-						<p> Soy una diseñadora de interfaces de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Me encanta aprender sobre nuevas tecnologías, leer novelas ver series y salir a caminar con mis perritos.</p>
+						<h2>About me</h2>
+						<p> I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on: Human-centred design, experience design - validation, understand & collaborate and creating valuable product experiences.</p>
 
 					</div>
 				</div>
 
 			</div>
 		</div>
-		
-	</div>
+<!-- END CONTACT -->
+
+<!-- END wrap -->
+
+	
 </div>
 
 <!-- footer -->
